crates/pgls_pretty_print/tests/snapshots/multi/tests__20230405085810_fix_avatars_handle_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/20230405085810_fix_avatars_handle.sql
---
create or replace function app.update_avatar_id()
returns trigger
language plpgsql
security definer
as $function$
declare
        v_handle app.valid_name;
        v_affected_account app.accounts := null;
    begin
        select (string_to_array(new.name, '/'::text))[1]::app.valid_name into v_handle;

        update app.accounts
        set avatar_id = new.id
        where handle = v_handle
        returning * into v_affected_account;

        if not v_affected_account is null then
            update auth.users u
            set
                "raw_user_meta_data" = u.raw_user_meta_data || jsonb_build_object(
                    'avatar_path', new.name
                )
            where u.id = v_affected_account.id;
        else
            update app.organizations
            set avatar_id = new.id
            where handle = v_handle;
        end if;

        return new;
    end;
$function$;

alter policy storage_objects_insert_policy
on storage.objects
with check (app.is_handle_maintainer(
  auth.uid(),
  cast((string_to_array(name, cast('/' as text)))[1]
  as app.valid_name)
));
